tests/common/snapshots/e2e_tests__common__visual_testing__Menu Bar Navigation__edit_menu_open.snap
---
source: tests/common/visual_testing.rs
assertion_line: 69
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 [No Na┌───────────────────────────────────┐                                    
    1 ││ Undo                        Ctrl+Z│                                   █
       │ Redo                        Ctrl+Y│                                   █
       │ ──────────────────────────────────│                                   █
       │ Cut                         Ctrl+X│                                   █
       │ Copy                        Ctrl+C│                                   █
       │ Paste                       Ctrl+V│                                   █
       │ ──────────────────────────────────│                                   █
       │ Select All                  Ctrl+A│                                   █
       │ ──────────────────────────────────│                                   █
       │ Find...                     Ctrl+F│                                   █
       │ Find in Selection                 │                                   █
       │ Find Next                       F3│                                   █
       │ Find Previous             Shift+F3│                                   █
       │ Replace...              Ctrl+Alt+R│                                   █
       │ ──────────────────────────────────│                                   █
       │ Delete Line                       │                                   █
       └───────────────────────────────────┘                                   █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 0, Col 13                                    Palette: Ctrl+P
