tests/common/snapshots/e2e_tests__common__visual_testing__Menu Bar Navigation__file_menu_open.snap
---
source: tests/common/visual_testing.rs
assertion_line: 69
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
┌──────────────────────────────┐                                                
│ New File               Ctrl+N│                                               █
│ Open File...           Ctrl+O│                                               █
│ ─────────────────────────────│                                               █
│ Save                   Ctrl+S│                                               █
│ Save As...                   │                                               █
│ ─────────────────────────────│                                               █
│ Close Buffer                 │                                               █
│ Quit                   Ctrl+Q│                                               █
└──────────────────────────────┘                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 0, Col 13                                    Palette: Ctrl+P
