tests/common/snapshots/e2e_tests__common__visual_testing__Menu Bar Navigation__help_menu_open.snap
---
source: tests/common/visual_testing.rs
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 [No Name]*                      ┌────────────────────────────────────┐         
    1 │ Hello, World!            │ Go to Definition                   │        █
                                 │ Go to Line...                Ctrl+G│        █
                                 │ Command Palette...           Ctrl+P│        █
                                 └────────────────────────────────────┘        █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 0, Col 13                                       Help: Ctrl+/
