tests/common/snapshots/e2e_tests__common__visual_testing__Menu Bar Navigation__view_menu_open.snap
---
source: tests/common/visual_testing.rs
assertion_line: 69
expression: "&screen_text"
---
 File   Edit   View   Selection   Go   Help                                     
 [No Name]*   ┌──────────────────────────────────────┐                          
    1 │ Hello,│ ☐ File Explorer                      │                         █
              │ ─────────────────────────────────────│                         █
              │ ☑ Line Numbers                       │                         █
              │ ☑ Line Wrap                          │                         █
              │ ─────────────────────────────────────│                         █
              │ Set Background...                    │                         █
              │ Set Background Blend...              │                         █
              │ Set Compose Width...                 │                         █
              │ ─────────────────────────────────────│                         █
              │ Split Horizontal                     │                         █
              │ Split Vertical                       │                         █
              │ Close Split                          │                         █
              │ Focus Next Split                     │                         █
              │ Focus Previous Split                 │                         █
              │ ─────────────────────────────────────│                         █
              │ Keybinding Style                     │                         █
              └──────────────────────────────────────┘                         █
                                                                               █
                                                                               █
                                                                               █
[No Name] [+] | Ln 0, Col 13                                    Palette: Ctrl+P
